mobile nav completely redone.

--- a/main/static/less/cart.less
+++ b/main/static/less/cart.less
@@ -2,10 +2,13 @@
 shopping-cart .payment_buttons {
   max-width: 400px;
 }
-.mobile-cart cart-button {
-  top: 9px;
-  right: 60px;
-  position: absolute;
+.mobile-cart {
+  border: none;
+  cart-button {
+    top: 8px;
+    right: 60px;
+    position: absolute;
+  }
 }
 
 shopping-cart .item {
