--- a/main/templates/_nav.html
+++ b/main/templates/_nav.html
@@ -3,7 +3,8 @@
   <!-- Brand and toggle get grouped for better mobile display -->
   <div class="navbar-header">
     <li class="visible-xs mobile-cart"><cart-button></cart-button></li>
-    <a class="navbar-toggle" style="cursor:pointer;" onclick="$('#navbar-collapse-1').toggleClass('in')">
+    <a class="navbar-toggle" style="cursor:pointer;"
+       onclick="$('.navbar-toggle,#navbar-collapse-1').toggleClass('in')">
       <span class="sr-only">Toggle navigation</span>
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
@@ -17,11 +18,13 @@
 
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse" id="navbar-collapse-1">
+    <a class="fa fa-close" style="cursor:pointer;"
+       onclick="$('.navbar-toggle,#navbar-collapse-1').toggleClass('in')"></a>
     <ul class="nav navbar-nav navbar-right auth">
       <li class="hidden-xs">
         <cart-button></cart-button>
       </li>
-      <li class="social">
+      <li class="social hidden-sm">
         {% for n in social_nav %}
         <a href="{{ n.url }}"><i class="fa fa-{{ n.name }}"></i></a>
         {% endfor %}
