updating graph a bit

--- a/main/static/less/form.less
+++ b/main/static/less/form.less
@@ -91,3 +91,10 @@ ur-document ur-form form {
     }
   }
 }
+
+ur-plot ur-form form {
+  display: flex;
+  justify-content: flex-start;
+  ur-input { flex-basis: auto; margin-right: 30px; }
+}
+  
