--- a/main/templates/admin/dashboard.html
+++ b/main/templates/admin/dashboard.html
@@ -8,11 +8,13 @@
 <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 <script type="riot/tag">
   <ur-plot>
-    <ur-form initial={ initial } submit="noop"></ur-form>
+    <ur-form initial={ initial } action="/dashboard/totals.json" ajax_success={ update_plot }
+             schema={ schema }></ur-form>
     <div id="tester" style="width:600px;height:250px;"></div>
 
+    var self = this;
     this.schema = [
-      { name: 'product_types', type: 'select', required: false,
+      { name: 'product_types', type: 'hidden', required: false,
         choice_tuples: [
           ["",'All Products'],
           ["214","Course Enrollments"],
@@ -26,39 +28,44 @@
           [90,'Three Months'],
           [180,'Six Months'],
           [365,'One Year'],
-          ['*','All of Time'],
         ]
       },
+      { name: 'metric', type: 'select', required: false,
+        choice_tuples: [
+          ['line_total','Cart Total'],
+          ['quantity','Quantity'],
+          ['new_students','New Students']
+        ]
+      }
     ];
     this.initial = uR.getQueryDict();
     this.initial.time_period = this.initial.time_period || 90;
+    this.initial.product_types = this.initial.product_types || 214;
+    this.initial.metric = this.initial.metric || 'line_total';
     this.on("mount",function() {
-      this.update_plot();
+      this.update();
+      setTimeout(function() { document.querySelector("ur-form button").dispatchEvent(new Event("click"))},0)
     });
-    update_plot() {
-      uR.ajax({
-        url: "/dashboard/totals.json"+window.location.search,
-        success: function(data) {
-          self.data = data;
-          console.log(data);
-          TESTER = document.getElementById('tester');
-          Plotly.plot(
-            TESTER, [
-              { x: data.days, y: data.money, name: 'money'},
-              { x: data.days, y: data.quantity, name: "quantity" }
-            ],
-            {
-              margin: { l: 50, r: 20, b: 40, t: 20 },
-              xaxis: {
-                title: 'Date',
-              },
-              yaxis: {
-                title: 'Money',
-              }
-            }
-          );
-        },
-      });
+    update_plot(data) {
+      var qs = "?";
+      var form_data = self.tags["ur-form"].getData();
+      for (key in form_data) { qs += key + "=" + encodeURIComponent(form_data[key]) + "&"; }
+      window.history && window.history.replaceState({},"",window.location.pathname+qs);
+      self.data = data;
+      var TESTER = document.getElementById('tester');
+      Plotly.purge(TESTER);
+      var metric = document.querySelector("[name=metric]");
+      Plotly.plot(
+        TESTER, [
+          { x: data.days, y: data.data, name: metric.options[metric.selectedIndex].innerText},
+        ],
+        {
+          margin: { l: 50, r: 20, b: 40, t: 20 },
+          xaxis: {
+            title: 'Date',
+          },
+        }
+      );
     }
   </ur-plot>
 
