moving dashboard view functionality into the javascript router file

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -90,6 +90,9 @@
     </div>
     {% include "_airbreak.html" %}
     <script src="https://cdn.jsdelivr.net/riot/2.5/riot+compiler.min.js"></script>
+    {% if request.path == "/admin/dashboard/" %}
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    {% endif %}
     {% compress js %}
     <script src="{{ STATIC_URL }}unrest/.dist/unrest-built.js"></script>
     <script src="{{ STATIC_URL }}drop/.dist/drop-built.js"></script>
