--- a/main/static/less/form.less
+++ b/main/static/less/form.less
@@ -92,7 +92,7 @@ ur-document ur-form form {
   }
 }
 
-ur-plot ur-form form {
+admin-dashboard ur-form form {
   display: flex;
   justify-content: flex-start;
   ur-input { flex-basis: auto; margin-right: 30px; }
