--- a/main/static/less/blog.less
+++ b/main/static/less/blog.less
@@ -46,5 +46,12 @@
     &.left, &.right { margin: 0 0 1em; }
     &.left { float: left; margin-right: 20px; }
     &.right { float: right; margin-left: 20px; }
+    @media (max-width: @screen-sm-max) {
+      &.left, &.right {
+        display: block;
+        float: none;
+        margin: 0 auto 1em;
+      }
+    }
   }
 }
