--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -89,7 +89,7 @@
       <div id="alert-div"></div>
     </div>
     {% include "_airbreak.html" %}
-    <script src="https://cdn.jsdelivr.net/riot/2.5/riot+compiler.min.js"></script>
+    <script src="{{ STATIC_URL }}riot+compiler.js"></script>
     {% if request.path == "/admin/dashboard/" %}
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     {% endif %}
