thirty days vs month resolutions

--- a/main/static/templates/admin/dashboard.html
+++ b/main/static/templates/admin/dashboard.html
@@ -35,6 +35,7 @@
         [1, 'One Day'],
         [2, 'Two Day'],
         [7, 'Week'],
+        [30, 'Thirty Days'],
         ['month', 'Month'],
       ]
     }
