marking two options as not implemented

--- a/main/static/templates/admin/dashboard.html
+++ b/main/static/templates/admin/dashboard.html
@@ -13,8 +13,8 @@
         ['quantity','Quantity'],
         ['new_students','New Students'],
         ['classes_per_student','Classes Per Student'],
-        ['new_members','New Members'],
-        ['member_payments','Member Payments'],
+        ['new_members','New Members (not working!)'],
+        ['member_payments','Member Payments (not working!)'],
       ]
     },
     { name: 'product_types', type: 'hidden', required: false,
