adding some html/styling to notifcation button while also hiding the notification button

--- a/main/static/less/form.less
+++ b/main/static/less/form.less
@@ -97,4 +97,5 @@ admin-dashboard ur-form form {
   justify-content: flex-start;
   ur-input { flex-basis: auto; margin-right: 30px; }
 }
-  
+
+label + [type=checkbox] + .help-block { display: inline; }
