--- a/main/templates/_nav.html
+++ b/main/templates/_nav.html
@@ -10,6 +10,11 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </a>
+    {% if unread_notifications %}
+    <div class="notifications right">
+      <a href="" data-reddot="{{ unread_notifications|length }}" class="fa fa-envelope"></a>
+    </div>
+    {% endif %}
     <a class="navbar-brand" href="/">
       <img src="{{ STATIC_URL }}img/new_logo.png" alt="{{ settings.SITE_NAME }} - {{ SITE_TAGLINE }}"
            title="{{ settings.SITE_NAME }} - {{ SITE_TAGLINE }}"/>
@@ -46,6 +51,7 @@
           {% endif %}
           <li><a href="{% url "logout" %}"><i class="fa fa-power-off"></i> Log out</a></li>
           <li><a href="{% url "account_settings" %}"><i class="fa fa-gear"></i> Settings</a></li>
+          <li><a href="{% url "notify_settings" %}"><i class="fa fa-envelope"></i> Notifications</a></li>
           {% for notification in request|get_notifications %}
           <li><a href="{{ notification.url }}"{% if notification.new_count %}
                  data-reddot="{{ notification.new_count }}"{% endif %}>
