preface notify urls

--- a/membership/templates/membership/notification_settings.html
+++ b/membership/templates/membership/notification_settings.html
@@ -25,7 +25,7 @@
       If you added a number previously and do not see it below then you most likely did not verify that number.
     </p>
     <div if={ smsnumber }>
-      <p>Any notification set to "Text Message" Will be sent to the following number</p>
+      <p>Any notification set to "Text Message" will be sent to the following number.</p>
       <p><b>Contact Number:</b> { smsnumber }</p>
     </div>
     <button class="btn btn-primary" onclick="uR.alertElement('phone-number');">
