moving notification settings into notify app

--- a/main/static/less/form.less
+++ b/main/static/less/form.less
@@ -99,3 +99,11 @@ admin-dashboard ur-form form {
 }
 
 label + [type=checkbox] + .help-block { display: inline; }
+
+.notify-form .form-group {
+  display: flex;
+  flex-wrap: wrap;
+  label, .help-block { order: 0; }
+  ul { order: 1; }
+  > label { font-size: 22px; }
+}
