switching notify page over to an unrest form

--- a/main/static/less/form.less
+++ b/main/static/less/form.less
@@ -104,6 +104,7 @@ label + [type=checkbox] + .help-block { display: inline; }
   display: flex;
   flex-wrap: wrap;
   label, .help-block { order: 0; }
+  > label, ul { flex-basis: 100%; }
   ul { order: 1; }
   > label { font-size: 22px; }
 }
