show events in dropdown for event peoples

--- a/event/templates/event/detail.html
+++ b/event/templates/event/detail.html
@@ -45,5 +45,5 @@
   </script>
   {% endif %}
 </div>
-<script type="riot/tag" src="{{ STATIC_URL }}tags/event.tag"></script>
+<script type="riot/tag" src="{{ STATIC_URL }}tags/event.tag?1"></script>
 {% endblock %}
