--- a/main/static/less/redesign.less
+++ b/main/static/less/redesign.less
@@ -64,7 +64,7 @@ ur-form button.disabled {
   pointer-events: auto !important;
 }
 
-ur-input.checkbox .invalid + label[data-error] {
+.ur-input.checkbox .invalid + label[data-error] {
   border-bottom: #e51c23 2px solid; /* base red from materialize */
   margin-bottom: 25px;
   &:after {
